the secand commit need to add admin adn an admin page

--- a/frontend/home.html
+++ b/frontend/home.html
@@ -1,4 +1,3 @@
-<!-- home.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,8 +12,6 @@
         <div class="container">
             <ul>
                 <li><a href="profile.html">Profile</a></li>
-                <li><a href="login.html">login</a></li>
-                <li><a href="register.html">register</a></li>
             </ul>
         </div>
     </nav>
@@ -37,43 +34,66 @@
     <script>
         // Axios GET request to fetch all books
         axios.get('http://localhost:5000/api/books')
-            .then(response => {
-                const books = response.data;
-                const booksList = document.getElementById('books-list');
-                books.forEach(book => {
-                    const bookDiv = document.createElement('div');
-                    bookDiv.classList.add('book');
-                    bookDiv.innerHTML = `
-                        <img src="http://localhost:5000/api/image/${book.image_filename}" alt="${book.title}">
-                        <div class="book-details">
-                            <h2>${book.name}</h2>
-                            <p>Author: ${book.author}</p>
-                            <p>Type: ${book.genre}</p>
-                            <p>In Stock: ${book.in_stock ? 'Yes' : 'No'}</p>
-                            <button class="loan-btn btn btn-primary" data-book-id="${book.id}">Loan Book</button>
-                        </div>
-                    `;
-                    booksList.appendChild(bookDiv);
-                });
+        .then(response => {
+            const books = response.data;
+            const booksList = document.getElementById('books-list');
+            books.forEach(book => {
+                const bookDiv = document.createElement('div');
+                bookDiv.classList.add('book');
+                bookDiv.innerHTML = `
+                    <img src="http://localhost:5000/api/image/${book.image_filename}" alt="${book.title}">
+                    <div class="book-details">
+                        <h2>${book.title}</h2>
+                        <p>Author: ${book.author}</p>
+                        <p>Type: ${book.genre}</p>
+                        <p>In Stock: ${book.in_stock ? 'Yes' : 'No'}</p>
+                        <button class="loan-btn btn btn-primary" data-book-id="${book.id}">Loan Book</button>
+                    </div>
+                `;
+                booksList.appendChild(bookDiv);
+            });
 
-                // Add event listener to loan buttons
-                const loanButtons = document.querySelectorAll('.loan-btn');
-                loanButtons.forEach(button => {
-                    button.addEventListener('click', function() {
-                        // Check if user is logged in (you need to implement this logic)
-                        const loggedIn = true; // Replace with actual logic to check if user is logged in
-                        if (loggedIn) {
-                            const bookId = button.getAttribute('data-book-id');
-                            // Implement loan functionality with bookId
-                            alert(`Loan functionality for Book ID ${bookId} to be implemented`);
-                        } else {
-                            // Redirect to Register page
-                            window.location.href = '/register';
-                        }
-                    });
+            // Function to check if user is authenticated
+            const checkLoggedIn = async () => {
+                try {
+                    const response = await axios.get('http://localhost:5000/api/auth/check'); // Replace with actual check endpoint
+                    return response.data.authenticated; // Assuming backend returns authenticated boolean
+                } catch (error) {
+                    console.error('Error checking authentication status:', error);
+                    return false;
+                }
+            };
+
+            // Add event listener to loan buttons
+            const loanButtons = document.querySelectorAll('.loan-btn');
+            loanButtons.forEach(button => {
+                button.addEventListener('click', async function() {
+                    const loggedIn = await checkLoggedIn();
+                    if (loggedIn) {
+                        const bookId = button.getAttribute('data-book-id');
+                        // Send POST request to loan the book
+                        axios.post(`http://localhost:5000/api/loans`, {
+                            user_id: 1, // Replace with actual logged-in user ID
+                            book_id: bookId,
+                            due_date: new Date().toISOString() // Replace with actual due date logic
+                        })
+                        .then(response => {
+                            alert(`Book ID ${bookId} successfully loaned!`);
+                            // Update UI to reflect loaned status
+                            button.disabled = true; // Disable the loan button after successful loan
+                        })
+                        .catch(error => {
+                            console.error('Error loaning book:', error);
+                            alert('Failed to loan the book. Please try again later.');
+                        });
+                    } else {
+                        // Redirect to Login page
+                        window.location.href = '/login'; // Change to appropriate URL
+                    }
                 });
-            })
-            .catch(error => console.error('Error fetching books:', error));
+            });
+        })
+        .catch(error => console.error('Error fetching books:', error));
     </script>
 </body>
 </html>
